Silly language/ui changes for the Townhall (hijacking Note)

--- a/bigbluebutton-html5/public/locales/en.json
+++ b/bigbluebutton-html5/public/locales/en.json
@@ -51,7 +51,7 @@
     "app.captions.pad.dictationOffDesc": "Turns speech recognition off",
     "app.captions.pad.speechRecognitionStop": "Speech recognition stopped due to the browser incompatibility or some time of silence",
     "app.textInput.sendLabel": "Send",
-    "app.note.title": "Shared Notes",
+    "app.note.title": "Chat (Matrix beta)",
     "app.note.label": "Note",
     "app.note.hideNoteLabel": "Hide note",
     "app.note.tipLabel": "Press Esc to focus editor toolbar",
@@ -62,7 +62,7 @@
     "app.userList.usersTitle": "Users",
     "app.userList.participantsTitle": "Participants",
     "app.userList.messagesTitle": "Messages",
-    "app.userList.notesTitle": "Notes",
+    "app.userList.notesTitle": "Integrated Chat",
     "app.userList.notesListItem.unreadContent": "New content is available in the shared notes section",
     "app.userList.captionsTitle": "Captions",
     "app.userList.presenter": "Presenter",
