--- a/bigbluebutton-html5/public/locales/en.json
+++ b/bigbluebutton-html5/public/locales/en.json
@@ -51,6 +51,11 @@
     "app.captions.pad.dictationOffDesc": "Turns speech recognition off",
     "app.captions.pad.speechRecognitionStop": "Speech recognition stopped due to the browser incompatibility or some time of silence",
     "app.textInput.sendLabel": "Send",
+    "app.matrix.title": "Chat (Matrix beta)",
+    "app.matrix.label": "Matrix",
+    "app.matrix.hideMatrixLabel": "Hide chat",
+    "app.matrix.tipLabel": "Press Esc to focus editor toolbar",
+    "app.matrix.locked": "Locked",
     "app.note.title": "Shared Notes",
     "app.note.label": "Note",
     "app.note.hideNoteLabel": "Hide note",
@@ -62,6 +67,8 @@
     "app.userList.usersTitle": "Users",
     "app.userList.participantsTitle": "Participants",
     "app.userList.messagesTitle": "Messages",
+    "app.userList.matrixTitle": "Integrated Chat",
+    "app.userList.matrixListItem.unreadContent": "New content is available in your LPC2021 chat room",
     "app.userList.notesTitle": "Notes",
     "app.userList.notesListItem.unreadContent": "New content is available in the shared notes section",
     "app.userList.captionsTitle": "Captions",
@@ -110,6 +117,7 @@
     "app.userList.userOptions.disableMic": "Viewers' microphones are disabled",
     "app.userList.userOptions.disablePrivChat": "Private chat is disabled",
     "app.userList.userOptions.disablePubChat": "Public chat is disabled",
+    "app.userList.userOptions.disableMatrix": "Matrix chat is disabled",
     "app.userList.userOptions.disableNote": "Shared notes are now locked",
     "app.userList.userOptions.hideUserList": "User list is now hidden for viewers",
     "app.userList.userOptions.webcamsOnlyForModerator": "Only moderators are able to see viewers' webcams (due to lock settings)",
@@ -118,6 +126,7 @@
     "app.userList.userOptions.enableMic": "Viewers' microphones are enabled",
     "app.userList.userOptions.enablePrivChat": "Private chat is enabled",
     "app.userList.userOptions.enablePubChat": "Public chat is enabled",
+    "app.userList.userOptions.enableMatrix": "Matrix chat is now enabled",
     "app.userList.userOptions.enableNote": "Shared notes are now enabled",
     "app.userList.userOptions.showUserList": "User list is now shown to viewers",
     "app.userList.userOptions.enableOnlyModeratorWebcam": "You can enable your webcam now, everyone will see you",
@@ -628,6 +637,7 @@
     "app.lock-viewers.microphoneLable": "Share microphone",
     "app.lock-viewers.PublicChatLabel": "Send Public chat messages",
     "app.lock-viewers.PrivateChatLable": "Send Private chat messages",
+    "app.lock-viewers.matrixLabel": "Edit Matrix chat",
     "app.lock-viewers.notesLabel": "Edit Shared Notes",
     "app.lock-viewers.userListLabel": "See other viewers in the Users list",
     "app.lock-viewers.ariaTitle": "Lock viewers settings modal",
